# pallet-manta-pay

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  FILE_TEMPLATE  README.md  W3F-Delivery-TODOS.md  W3F-deliverable-checklist.md  build.rs  coin.json  token_1.hex  token_1.utxo  token_2.hex  token_2.utxo  token_3.hex  token_3.utxo  token_4.hex  token_4.utxo
.github/workflows/: check.yml  check_integrations.yml  check_manta_runtime.yml  check_pallet_manta_pay.yml  check_self.yml
benches/: main.rs  manta_bench.rs
coverage/: index.html
coverage/src/: dh.rs.html  forfeit.rs.html  index.html  lib.rs.html  manta_token.rs.html  param.rs.html  priv_coin.rs.html  serdes.rs.html  transfer.rs.html
coverage/src/test/: index.html  mod.rs.html
scripts/: check_integrations_failure.sh  check_manta_runtime.sh
src/: bench_composite.rs  benchmark.rs  benchmarking.rs  checksum.rs  coin.rs  constants.rs  dh.rs  forfeit.rs  ledger.rs  lib.rs  main.rs  manta_token.rs  mock.rs  param.rs  payload.rs  precomputed_coins.rs  priv_coin.rs  reclaim.rs  serdes.rs  shard.rs  transfer.rs  weights.rs
src/benchmark/: mod.rs  precomputed_coins.rs
src/crypto/: aux.rs  dh.rs  mod.rs  reclaim.rs  transfer.rs  zkp.rs
src/payload/: default.rs  mod.rs  santiy.rs  serdes.rs
src/runtime_benchmark/: bench_composite.rs  mod.rs
src/test/: crypto.rs  frame.rs  frame_hardcode.rs  mod.rs  storage.rs
src/zkp/: circuit.rs  gadget.rs  keys.rs  mod.rs  reclaim.rs  serdes.rs  transfer.rs  verifier.rs  zkp.rs
