[package]
name = "pallet-manta-pay"
version = "0.3.0"
authors = ["Manta Network <contact@manta.network>"]
edition = "2018"
license = "GPL 3.0"
repository = "https://github.com/Manta-Network/pallet-manta-pay"
description = "MantaPay Pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "precompute_coins"
required-features = ["precompute-coins"]

[features]
# Default Features
default = ["std"]

# Runtime Benchmarks
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

# Standard Library
std = [
	"frame-benchmarking/std",
	"frame-system/std",
]

# Precompute Benchmark Transactions
precompute-coins = [
	"anyhow",
	"indoc",
	"manta-sdk/download",
	"manta-util/std",
	"rand",
	"tempfile",
]

[dependencies]
anyhow = { version = "1.0.53", optional = true }
data-encoding = { version = "2.3.2", default-features = false, features = [ "alloc" ] }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10", optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
frame-system = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
indoc = { version = "1.0.3", default-features = false, optional = true}
log = { version = "0.4.14", default-features = false }
manta-accounting = { git = "https://github.com/manta-network/manta-rs", branch = "setup-manta-rs" }
manta-crypto = { git = "https://github.com/manta-network/manta-rs", branch = "setup-manta-rs" }
manta-pay = { git = "https://github.com/manta-network/manta-rs", branch = "setup-manta-rs", features = ["arkworks", "groth16"] }
manta-sdk = { git = "https://github.com/manta-network/sdk", branch = "add-sdk-library" }
manta-util = { git = "https://github.com/manta-network/manta-rs", branch = "setup-manta-rs" }
rand = { version = "0.8.4", default-features = false, optional = true }
scale-codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
sp-std = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
tempfile = { version = "3.3.0", optional = true }

[dev-dependencies]
ark-bls12-381 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
ark-ed-on-bls12-381 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
ark-ff = { version = "0.3.0", default-features = false }
ark-groth16 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
ark-relations = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", default-features = false, features = [ "derive" ] }
bencher = "0.1.5"
criterion = "0.3.4"
lazy_static = "1.4.0"
rand_chacha = { version = "0.3.1", default-features = false }
serde = { default-features = false, version = '1' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
sp-io = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
