[package]
name = "pallet-manta-pay"
version = "0.3.0"
authors = ["Manta Network <contact@manta.network>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/pallet-manta-pay"
description = "MantaPay Pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "precompute_coins"
required-features = ["precompute-coins"]

[features]
# Default Features
default = ["std"]

# Runtime Benchmarks
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

# Standard Library
std = [
	"frame-benchmarking/std",
	"frame-system/std",
]

# Precompute Benchmark Transactions
precompute-coins = [
	"anyhow",
	"indoc",
	"manta-sdk/download",
	"manta-util/std",
	"rand",
	"tempfile",
]

[dependencies]
anyhow = { version = "1.0.53", optional = true }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10", optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
frame-system = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
indoc = { version = "1.0.3", default-features = false, optional = true}
manta-accounting = { path = "../manta-rs/manta-accounting", default-features = false }
manta-crypto = { path = "../manta-rs/manta-crypto", default-features = false }
manta-pay = { path = "../manta-rs/manta-pay", default-features = false, features = ["arkworks", "groth16"] }
manta-sdk = { path = "../sdk", default-features = false }
manta-util = { path = "../manta-rs/manta-util", default-features = false }
rand = { version = "0.8.4", default-features = false, optional = true }
scale-codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
sp-std = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
tempfile = { version = "3.3.0", optional = true }

[dev-dependencies]
bencher = "0.1.5"
criterion = "0.3.4"
lazy_static = "1.4.0"
sp-core = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
sp-io = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.10" }
